02-terraform-aws/02-user-define/03_sg.tf
# Create Security Group for SSH and HTTP 
resource "aws_security_group" "dev-sg" {
  name        = "dev-sg"
  description = "allow all traffic"
  vpc_id      = aws_vpc.dev-vpc.id

  ingress {
    description = "SSH protocol"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP protocol"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "dev-sg"
  }
}
